# morph-kgc

./: .gitignore  .gitmodules  .travis.yml  .zenodo.json  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  a.csv  a.nt  config.ini  debug_mappings.py  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  test_fixed_mapping.py  test_geometry_conversion.py  test_geoparquet_debug.py  test_geoparquet_debug_logging.py  test_geoparquet_ref.py
.github/DISCUSSION_TEMPLATE/: bug_report.yml  general.yml  ideas.yml  q-a.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  bug_report.yml  config.yml  documentation-improvement.md  feature-request.md  feature_request.md  installation-issue.md  submit-quesion.md
.github/workflows/: ci.yml  continuous-integration.yml  docs-publish.yml  pypi-publish.yml
dbms_support/: docker-compose.yml
docs/: demo.md  documentation.md  faq.md  getting-started.md  guide.md  index.md  requirements.txt  research.md  tutorial.md  why-morph-kgc.md
docs/assets/: BASF.tif
docs/stylesheets/: extra.css
evaluation/: maximal.ini  maximal_PARALELIZACIÓN.ini  no-partition.ini  partial-aggregation.ini  partial-aggregation_PARALELIZACIÓN.ini
examples/: README.md  advanced_config.ini  basic_config.ini  default_config.ini  dynamic_api_token.py  memory_optimization_config.ini  minimal_config.ini  morph-kgc+oxigraph.py  morphkgc-optimized  oracle_config.ini
examples/bootstrapping/: config.ini  requirementsBS.txt
examples/configuration/: default_config.ini  oracle_config.ini
examples/configuration-file/: basic_config.ini  default_config.ini
examples/configuration-file-examples/: basic_config.ini  default_config.ini  oracle_config.ini
examples/csv/: config.ini  mapping.csv.ttl  mapping.csv.yml
examples/csv-example/: config.ini  mapping.csv.nt
examples/dataframe/: kg_generation.py  mapping.rml.ttl  mapping_rml.ttl
examples/dict/: config.ini  kg_generation.py  mapping.rml.ttl  mapping_rml.ttl
examples/json/: config.ini  data.json  mapping.json.yaml
examples/json-example/: config.ini  mapping.json.ttl
examples/json_in_memory/: kg_generation.py  mapping_rml.ttl
examples/postgres/: config.ini  mapping.ttl
examples/rdb/: config.ini  mapping.rdb.yml
examples/rdb-example/: config.ini  gtfs-rdb.r2rml.ttl
examples/rml-star/: mapping.json.ttl
examples/s3_parquet/: config.ini  mapping.ttl
examples/tutorial/: Morph-KGC.ipynb  README.md  mapping.csv.ttl  mapping.gtfs.ttl  mapping.somef.ttl  oeg-upm_morph-kgc.json
examples/xml/: config.ini  data.xml  mapping.xml.yaml  mappingOA.xml.ttl
examples/xml-example/: config.ini
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: deployment.yaml  secrets.yaml
morph-kgc/: .~lock.m.csv#  args_parser.py  config.py  constants.py  mapping_parser.py  materializer.py  morph-kgc.py  morph_kgc.py  morph_utils.py  out.csv  relational_source.py  semantify.py  utils.py
morph-kgc/data_source/: relational_source.py  tabular_source.py
morph-kgc/data_sources/: relational_source.py
morph-kgc/mapping/: mapping_constants.py  mapping_parser.py  mapping_partitioner.py  mapping_validator.py  parser.py
morph-rdfizer/: .~lock.out.csv#  TriplesMap.py  args_parser.py  args_parsing.py  mapping_parser.py  mappings.py  materializer.py  morph_utils.py  out.csv  relational_source.py  semantify.py
morph-rdfizer/utils/: args_parsing.py  configuration.py  morph_utils.py
output/: direct_mapping.yaml  output_graph.nt
r2rml-test-cases/: .~lock.results-mysql.csv#  config-morph.ini  config.ini  i.csv  manifest.ttl  metadata.csv  requirements.txt  results-mysql.csv  test.py
r2rml-test-cases/R2RMLTC0001b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0002a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0002f/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0002h/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0002j/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0004a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0004b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0005a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0005b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0006a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007c/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007d/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007e/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007f/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007g/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0007h/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0008a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0008b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0009a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0009b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0010b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0010c/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0011b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0012a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0012b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0012c/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0012d/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0012e/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0013a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0016a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0016b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0016c/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0016d/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0016e/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0018a/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0019b/: engine_output-mysql.ttl
r2rml-test-cases/R2RMLTC0020a/: engine_output-mysql.ttl
test-cases/: README.md  config-morph.ini  config.ini  mapping.rml.ttl  mapping.yml  metadata.csv
(+1594 files in other folders)
