[build-system]
requires = ['hatchling>=1.11.0']
build-backend = 'hatchling.build'

[project.urls]
Documentation = 'https://morph-kgc.readthedocs.io/en/latest/documentation/'
Source = 'https://github.com/morph-kgc/morph-kgc'
Tracker = 'https://github.com/morph-kgc/morph-kgc/issues'
CI = 'https://github.com/morph-kgc/morph-kgc/actions'
Homepage = 'https://morph-kgc.readthedocs.io/en/latest/'
History = 'https://github.com/morph-kgc/morph-kgc/releases'
#Sponsor = ''

[project]
name = 'morph_kgc'
description = 'Powerful [R2]RML engine to create RDF knowledge graphs from heterogeneous data sources.'
readme = 'README.md'
keywords = ['Morph-KGC', 'RDF', 'R2RML', 'RML', 'RML-star', 'Knowledge Graph', 'Data Integration']
authors = [
  {name = 'Julián Arenas-Guerrero', email = 'julian.arenas.guerrero@upm.es'}
]
license = 'Apache-2.0'
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Pre-processors',
  'Topic :: Database',
  'Topic :: Utilities',
  'Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator',
]
requires-python = '>=3.7'
dynamic = ['version']
dependencies = [
  'pandas>=1.4.0, <2.0.0',
  'rdflib>=6.1.1, <7.0.0',
  'pyoxigraph>=0.3.10, <1.0.0',
  'sql-metadata>=2.6.0, <3.0.0',
  'SQLAlchemy>=1.4.0, <2.0.0',
  'jsonpath-python>=1.0.6, <2.0.0',
  'elementpath>=4.0.1, <5.0.0',
  'duckdb>=0.7.0, <2.0.0',
  'falcon>=3.0.0, <4.0.0'
]

[tool.hatch.version]
path = 'src/morph_kgc/_version.py'

[project.optional-dependencies]
test = ['pytest>=7.0.0, <8.0.0', 'openpyxl>=3.0.0, <4.0.0', 'odfpy>=1.4.1, <2.0.0', 'pyarrow>=11.0.0, <12.0.0']
performance = ['bottleneck>=1.3.0, <2.0.0', 'numexpr>=2.7.0, <3.0.0']
mysql = ['pymysql>=1.0.2, <2.0.0', 'cryptography>=39.0.0, <40.0.0']
postgresql = ['psycopg2-binary>=2.9.5, <3.0.0']
oracle = ['cx-Oracle>=8.3.0, <9.0.0']
mssql = ['pymssql>=2.2.7, <3.0.0']
excel = ['openpyxl>=3.0.0, <4.0.0', 'odfpy>=1.4.1, <2.0.0']
tabular = ['pyarrow>=11.0.0, <12.0.0']
spss = ['pyreadstat>=1.2.0, <2.0.0']
all = [
  'morph_kgc[mysql]',
  'morph_kgc[postgresql]',
  'morph_kgc[oracle]',
  'morph_kgc[mssql]',
  'morph_kgc[excel]',
  'morph_kgc[tabular]',
  'morph_kgc[spss]',
]
