[tool.poetry]
name = "Morph-KGC"
version = "0.1.0"
description = "Powerful [R2]RML engine to create RDF knowledge graphs from heterogeneous data sources."
keywords = ['Morph-KGC', 'RDF', 'R2RML', 'RML', 'RML-star', 'Knowledge Graph', 'Data Integration']
authors = ["Julián Arenas-Guerrero <julian.arenas.guerrero@upm.es>"]
readme = "README.md"
license = 'Apache-2.0'
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Pre-processors',
  'Topic :: Database',
  'Topic :: Utilities',
  'Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator',
]

[tool.poetry.urls]
"Documentation" = 'https://morph-kgc.readthedocs.io/en/latest/documentation/'
"Source" = 'https://github.com/morph-kgc/morph-kgc'
"Tracker" = 'https://github.com/morph-kgc/morph-kgc/issues'
"CI" = 'https://github.com/morph-kgc/morph-kgc/actions'
"Homepage" = 'https://morph-kgc.readthedocs.io/en/latest/'
"History" = 'https://github.com/morph-kgc/morph-kgc/releases'

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
rdflib = "^7.0.0"
ruamel-yaml = ">=0.18.0,<0.19.0"
jsonpath-python = "^1.0.6"
elementpath = "^4.1.5"
duckdb = ">=0.7.0,<0.8.0"
falcon = "^3.1.1"
pyoxigraph = "^0.3.20"
pytest = {version = "^7.4.3", optional = true}
sqlalchemy = {version = "^2.0.23", optional = true}
sql-metadata = {version = "^2.10.0", optional = true}
openpyxl = {version = "^3.1.2", optional = true}
odfpy = {version = "^1.4.1", optional = true}
pyarrow = {version = "^14.0.1", optional = true}
kafka-python = {version = "^2.0.2", optional = true}
pymysql = {version = "^1.1.0", optional = true}
cryptography = {version = "^41.0.5", optional = true}
cx-oracle = {version = "^8.3.0", optional = true}
pyreadstat = {version = "^1.2.5", optional = true}
psycopg = {version = "^3.1.13", optional = true}
pymssql = {version = "^2.2.10", optional = true}


[tool.poetry.extras]
test = ['pytest', 'sqlalchemy', 'sql-metadata', 'openpyxl', 'odfpy', 'pyarrow']
kafka = ['kafka-python']
sqlite = ['sqlalchemy', 'sql-metadata']
mysql = ['pymysql', 'cryptography', 'sqlalchemy', 'sql-metadata']
postgresql = ['psycopg', 'sqlalchemy', 'sql-metadata']
oracle = ['cx-oracle', 'sqlalchemy', 'sql-metadata']
mssql = ['pymssql', 'sqlalchemy', 'sql-metadata']
excel = ['openpyxl', 'odfpy']
tabular = ['pyarrow']
spss = ['pyreadstat']
all = ['kafka-python', 'pymysql', 'cryptography', 'sqlalchemy', 'sql-metadata', 'psycopg', 'cx-oracle', 'pymssql', 'openpyxl', 'odfpy', 'pyarrow', 'pyreadstat']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
